{
  "version": 4,
  "terraform_version": "1.2.1",
  "serial": 258,
  "lineage": "b009a359-9989-1aa5-1379-dba7fb1fed2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:internet-gateway/igw-0215017e2248dee11",
            "id": "igw-0215017e2248dee11",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0215017e2248dee11",
            "id": "r-rtb-0c0fc8da3c9a8236a1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c0fc8da3c9a8236a",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.default",
            "aws_route_table.public",
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:route-table/rtb-021ab42caa47ecde2",
            "id": "rtb-021ab42caa47ecde2",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Vault private"
            },
            "tags_all": {
              "Name": "Vault private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:route-table/rtb-0c0fc8da3c9a8236a",
            "id": "rtb-0c0fc8da3c9a8236a",
            "owner_id": "900131238574",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0215017e2248dee11",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Vault public"
            },
            "tags_all": {
              "Name": "Vault public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0da0440ff834d6a20",
            "route_table_id": "rtb-021ab42caa47ecde2",
            "subnet_id": "subnet-0c66eaf049b47a287"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0706608799bc57765",
            "route_table_id": "rtb-021ab42caa47ecde2",
            "subnet_id": "subnet-093813efa17d4a3a8"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-020a2f04836af3c18",
            "route_table_id": "rtb-021ab42caa47ecde2",
            "subnet_id": "subnet-09c9dbf23987b4a51"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05e7d99657776ad2a",
            "route_table_id": "rtb-0c0fc8da3c9a8236a",
            "subnet_id": "subnet-0558deaa844ed1edb"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f10dade599f1a01a",
            "route_table_id": "rtb-0c0fc8da3c9a8236a",
            "subnet_id": "subnet-086c0154c261c1a57"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01c7a379c063e02d3",
            "route_table_id": "rtb-0c0fc8da3c9a8236a",
            "subnet_id": "subnet-008191ccef511e5d6"
          },
          "dependencies": [
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0c66eaf049b47a287",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.64.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c66eaf049b47a287",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-093813efa17d4a3a8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.65.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-093813efa17d4a3a8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-09c9dbf23987b4a51",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.66.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c9dbf23987b4a51",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault private",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-0558deaa844ed1edb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.1.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0558deaa844ed1edb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-086c0154c261c1a57",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-086c0154c261c1a57",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:subnet/subnet-008191ccef511e5d6",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1c",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.1.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008191ccef511e5d6",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "900131238574",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "Name": "Vault public",
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "vpc_id": "vpc-0a40a8e8b4d85b652"
          },
          "dependencies": [
            "aws_vpc.default",
            "data.aws_availability_zones.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:900131238574:vpc/vpc-0a40a8e8b4d85b652",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0729b04514b8d3e43",
            "default_route_table_id": "rtb-064fec311f68a9f7a",
            "default_security_group_id": "sg-075d5b357ece75381",
            "dhcp_options_id": "dopt-ea9e8e88",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a40a8e8b4d85b652",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-064fec311f68a9f7a",
            "owner_id": "900131238574",
            "tags": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            },
            "tags_all": {
              "owner": "robertdebock",
              "purpose": "ci-pr-dr"
            }
          }
        }
      ]
    }
  ]
}